[package]
name = "kakarot-rpc"
version = "0.6.14"
edition = "2021"
authors = [
  "Abdelhamid Bakhta <@abdelhamidbakhta>",
  "Elias Tazartes <@eikix>",
  "Clement Walter <@clementwalter>",
  "Gregory Edison <@greged93>",
  "Johann Bestowrous <@jobez>",
  "Harsh Bajpai <@bajpai244>",
  "Danilo Kim <@danilowhk>",
]
description = "RPC node for the Kakarot zk EVM"
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/kakarot-rpc"
readme = "./README.md"
license = "MIT"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = "warn"

# new lints that are still under development
nursery = "warn"
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"

# lints which are rather strict or have occasional false positives
pedantic = "warn"
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"

[dependencies]
# Starknet dependencies
cainome = { git = "https://github.com/cartridge-gg/cainome.git", tag = "v0.2.6", default-features = false, features = [
  "abigen-rs",
] }
cairo-lang-starknet = { version = "2.5.4", default-features = false }
starknet = { version = "0.9.0", default-features = false }
starknet-crypto = { version = "0.6.1", default-features = false }
starknet_api = { version = "0.7.0-dev.0", default-features = false }

# Ethereum dependencies
alloy-primitives = "0.7.2"
alloy-rlp = { version = "0.3.4", default-features = false }
alphanet-instructions = { git = "https://github.com/paradigmxyz/alphanet.git", rev = "a7f66d6", default-features = false }
ethers = { version = "2.0.9", default-features = false }
ethers-solc = { version = "2.0.9", default-features = false }
jsonrpsee = { version = "0.21.0", features = ["macros", "server"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.2.0-beta.7", default-features = false, features = [
  "alloy-compat",
] }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.2.0-beta.7", default-features = false, features = [
  "arbitrary",
] }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.2.0-beta.7", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.2.0-beta.7", default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "7168ac5" }

# Serde
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false }
serde_with = { version = "2.3.1", default-features = false }

# Others
anyhow = { version = "1.0.82", default-features = false }
async-trait = { version = "0.1.80", default-features = false }
auto_impl = { version = "1.1.0", default-features = false }
bytes = { version = "1.6.0", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
env_logger = { version = "0.11.3", default-features = false }
eyre = { version = "0.6.12", default-features = false }

foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
futures = { version = "0.3.30", default-features = false }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.12.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.21", default-features = false }
mongodb = { version = "2.8.2", default-features = false, features = [
  "tokio-runtime",
] }
reqwest = { version = "0.12.3", default-features = false }
rstest = { version = "0.19.0", default-features = false }

thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.37.0", features = ["macros"] }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.4.4", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }

# Prometheus
governor = { version = "0.6.0", default-features = false, features = ["std"] }
prometheus = { version = "0.13.0", default-features = false }
hyper = { version = "1.3.1", default-features = false }
hyper-util = { version = "0.1.3", default-features = false, features = [
  "server",
] }
http-body-util = { version = "0.1.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }

# Testing crates
arbitrary = { version = "1", features = ["derive"] }
ef-testing = { git = "https://github.com/kkrt-labs/ef-tests.git", rev = "80f179f", default-features = false, features = [
  "v0",
], optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
rayon = { version = "1.10.0", default-features = false, optional = true }
strum = { version = "0.26.2", default-features = false, optional = true }
strum_macros = { version = "0.26.2", default-features = false, optional = true }
testcontainers = { version = "0.15.0", default-features = false, optional = true }
tokio-util = { version = "0.7.10", features = [
  "codec",
], default-features = false, optional = true }
tokio-stream = { version = "0.1.15", default-features = false, optional = true }


# In order to use dojo-test-utils, we need to explicitly declare the same patches as them in our Cargo.toml
# Otherwise, underlying dependencies of dojo will not be patched and we will get a compilation error
# see https://github.com/dojoengine/dojo/issues/563
# When making changes to the rev, please also update to make file to the same rev in the `install-katana` rule.
dojo-test-utils = { git = 'https://github.com/dojoengine/dojo', tag = "v0.7.0-alpha.0", default-features = false }
katana-core = { git = 'https://github.com/dojoengine/dojo', tag = "v0.7.0-alpha.0", features = [
  "messaging",
] }
katana-primitives = { git = 'https://github.com/dojoengine/dojo', tag = "v0.7.0-alpha.0", default-features = false, features = [
  "serde",
] }

alloy-signer-wallet = { version = "0.1.0", default-features = false }

[patch."https://github.com/starkware-libs/blockifier"]
blockifier = { git = "https://github.com/dojoengine/blockifier", rev = "d38b979" }

[patch.crates-io]
cairo-felt = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }
cairo-vm = { git = "https://github.com/dojoengine/cairo-rs.git", rev = "1031381" }
# we patch starknet_api because the version v0.7.0-rc.0 was removed from crates.io
# we need v0.7.0-rc.0 to be compatible with dojo.
starknet_api = { git = "https://github.com/starkware-libs/starknet-api.git", tag = "v0.7.0-rc.0" }

alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "d68a6b787b2904061f0ae7fcc02ece8513e3c500" }

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }
toml = { version = "0.8.12", default-features = false }
proptest = { version = "1.4.0", default-features = false }

[features]
testing = [
  "testcontainers",
  "rayon",
  "ef-testing",
  "tokio-util",
  "tokio-stream",
  "rand",
  "strum",
  "strum_macros",
]
hive = []
arbitrary = ["rand"]

[[bin]]
name = "katana_genesis"
required-features = ["testing"]

[[bin]]
name = "hive_genesis"
required-features = ["testing"]

[[bin]]
name = "hive_chain"
required-features = ["testing"]
