[package]
name = "kakarot-rpc"
version = "0.7.0"
edition = "2021"
authors = [
  "Abdelhamid Bakhta <@abdelhamidbakhta>",
  "Elias Tazartes <@eikix>",
  "Clement Walter <@clementwalter>",
  "Gregory Edison <@greged93>",
  "Johann Bestowrous <@jobez>",
  "Harsh Bajpai <@bajpai244>",
  "Danilo Kim <@danilowhk>",
]
description = "RPC node for the Kakarot zk EVM"
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/kakarot-rpc"
readme = "./README.md"
license = "MIT"
rust-version = "1.81"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
future_not_send = "allow"
fallible_impl_from = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"

[dependencies]
# Starknet dependencies
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.1", default-features = false, features = [
  "abigen-rs",
] }
starknet = { version = "0.12", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Ethereum dependencies
alloy-rlp = { version = "0.3.8", default-features = false }
alloy-sol-types = { version = "0.8.4", default-features = false }
alloy-contract = { version = "0.3.6", default-features = false }
alloy-rpc-types = { version = "0.4.2", features = [
  "eth",
  "arbitrary",
], default-features = false }
alloy-consensus = { version = "0.4.2", default-features = false, optional = true }
alloy-rpc-types-txpool = { version = "0.4.2", default-features = false }
alloy-rpc-types-trace = { version = "0.4.2", default-features = false }
jsonrpsee = { version = "0.24", features = ["macros", "server"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false, features = [
  "std",
] }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false, features = [
  "std",
] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false, features = [
  "alloy-compat",
  "std",
  "arbitrary",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false, features = [
  "std",
] }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false, optional = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "e427eb2", default-features = false }
revm-inspectors = "0.8.1"

# Error
eyre = { version = "0.6", default-features = false }
thiserror = { version = "1", default-features = false }

# Futures
async-trait = { version = "0.1", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros"] }

# Network
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", features = ["cors"] }
url = { version = "2.5", default-features = false }

# Serde
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }

# Tracing
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.16.0", features = [
  "trace",
  "tonic",
  "metrics",
] }
opentelemetry_sdk = { version = "0.23.0", features = [
  "trace",
  "metrics",
  "rt-tokio",
] }
tracing-opentelemetry = "0.24.0"


# Others
auto_impl = { version = "1", default-features = false }
bytes = { version = "1.6", default-features = false }
dotenvy = { version = "0.15", default-features = false }
itertools = { version = "0.13", default-features = false }
mongodb = { version = "3.0", default-features = false, features = [
  "rustls-tls",
  "compat-3-0-0",
] }

# Prometheus
prometheus = { version = "0.13", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = [
  "server",
] }
http-body-util = { version = "0.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }

# Testing crates
alloy-dyn-abi = { version = "0.8.4", default-features = false }
alloy-json-abi = { version = "0.8.4", default-features = false, optional = true }
alloy-primitives = { version = "0.8.4", default-features = false }
alloy-signer-local = { version = "0.4.2", default-features = false, optional = true }
alloy-signer = { version = "0.4.2", default-features = false, optional = true }
alloy-serde = { version = "0.4.2", default-features = false }
alloy-eips = { version = "0.4.2", default-features = false }
anyhow = { version = "1", default-features = false, optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master", optional = true }
rand = { version = "0.8", default-features = false, optional = true }
rayon = { version = "1", default-features = false, optional = true }
rstest = { version = "0.21", default-features = false, optional = true }
serde_with = { version = "3.9", default-features = false, optional = true }
strum = { version = "0.26", default-features = false, optional = true }
strum_macros = { version = "0.26", default-features = false, optional = true }
testcontainers = { version = "0.19", default-features = false, optional = true }
tokio-util = { version = "0.7", features = [
  "codec",
], default-features = false, optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true }
walkdir = { version = "2.5", default-features = false, optional = true }

dojo-test-utils = { git = 'https://github.com/dojoengine/dojo', tag = "v1.0.0-alpha.14", default-features = false, optional = true }
katana-primitives = { git = 'https://github.com/dojoengine/dojo', tag = "v1.0.0-alpha.14", default-features = false, features = [
  "serde",
], optional = true }
mockall = { version = "0.13.0", default-features = false, optional = true }
clap = { version = "4.5.17", optional = true }


starknet_api = { version = "0.13.0-rc.0", optional = true }
revm-interpreter = { version = "10.0", default-features = false, optional = true }
revm-primitives = { version = "10.0", default-features = false, optional = true }
starknet-crypto = { version = "0.7", optional = true }

[dev-dependencies]
hex = { version = "0.4", default-features = false }
proptest = { version = "1.5", default-features = false }
reqwest = { version = "0.12", default-features = false }
toml = { version = "0.8", default-features = false }
tempfile = "3.8"

[features]
testing = [
  "alloy-json-abi",
  "alloy-signer-local",
  "alloy-signer",
  "alloy-consensus",
  "anyhow",
  "dep:arbitrary",
  "dojo-test-utils",
  "foundry-config",
  "katana-primitives",
  "mockall",
  "rand",
  "rayon",
  "reth-testing-utils",
  "rstest",
  "serde_with",
  "strum",
  "strum_macros",
  "testcontainers",
  "tokio-stream",
  "tokio-util",
  "walkdir",
  "starknet_api",
  "revm-interpreter",
  "revm-primitives",
  "starknet-crypto",
]
binaries = ["clap"]
hive = []
arbitrary = ["rand", "dep:arbitrary"]

[[bin]]
name = "katana_genesis"
required-features = ["testing"]

[[bin]]
name = "hive_genesis"
required-features = ["testing", "binaries"]

[[bin]]
name = "hive_chain"
required-features = ["testing", "binaries"]
