[package]
name = "kakarot_rpc_core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
eyre = "0.6.8"
log = "0.4.17"
env_logger = "0.10.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
url = "2.3.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
jsonrpsee = "0.16.2"
reqwest = "0.11.13"
