[package]
name = "kakarot-rpc-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dojo-test-utils = { workspace = true }
env_logger = "0.10.0"
eyre = { workspace = true }
git2 = { workspace = true, optional = true }
hex = "0.4"
jsonrpsee = { workspace = true }
katana-core = { workspace = true }
log = "0.4.17"
pin-project = { workspace = true }
reqwest = "0.11.13"
reth-primitives = { workspace = true }
reth-rlp = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
starknet = { workspace = true }
starknet-crypto = { workspace = true }
thiserror = "1.0.38"
url = { workspace = true }

starknet-abigen-parser = { workspace = true }
starknet-abigen-macros = { workspace = true }


futures = "0.3.26"
num-bigint = "0.4.3"
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { workspace = true }

lazy_static = { workspace = true }
ruint = { workspace = true }
tokio = { workspace = true }


bytes = "1"
dotenv = { workspace = true }
ethers = { workspace = true }
ethers-solc = { workspace = true }
foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
rstest = { workspace = true }
walkdir = "2.3.3"

[dev-dependencies]
cargo-husky = { workspace = true }
ctor = { workspace = true }
dojo-test-utils = { workspace = true }
starknet-crypto = { workspace = true }
toml = "0.7.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kakarot-test-utils = { path = "../test-utils" }
kakarot-rpc-core = { path = "." }
