[package]
name = "kakarot-rpc"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
kakarot_rpc_core = { path = "../core" }
log = "0.4.17"
url = { workspace = true }

# rpc
jsonrpsee = { workspace = true }

# async
async-trait = { workspace = true }
tokio = { workspace = true }

# misc
anyhow = "1.0.68"
dotenv = { workspace = true }
hex = "0.4"
reqwest = "0.11.13"
reth-primitives = { workspace = true }
reth-rlp = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
starknet = { workspace = true }
thiserror = "1.0.38"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
lazy_static = { workspace = true }
tower = "0.4.13"
tower-http = "0.4.1"

[dev-dependencies]
dojo-test-utils = { workspace = true }
cargo-husky = { workspace = true }
